# RustStuff

./: Cargo.toml  README.md
AoC/: AoC_2020_01.rs
alg/: aoc.rs  gcd.rs
basics/: 99-problems_1.rs  array.rs  chap_02_tutorial.rs  chap_04_ownership_01.rs  chap_04_ownership_02.rs  chap_05_struct_02.rs  chap_09_errors_02.rs  chap_09_errors_own.rs  chap_10_generics_01.rs  chap_13_closure_1.rs  expr.rs  hello_world.rs  int_fun.rs  iterator_01.rs  ownership_03.rs  struct_01.rs  struct_03.rs  tree_stuff.rs  vec_01.rs  vec_02.rs
cargo_stuff/src/: hyper_client.rs  main.rs  rnd_01.rs  serde_1.rs  serde_2.rs
logging/simple/: Cargo.toml
logging/simple/src/: main.rs
src/: aoc.rs  closure_1.rs  hello_world.rs  hyper_client.rs  iterator_01.rs  main.rs  ownership_01.rs  ownership_02.rs  serde_1.rs  serde_2.rs  struct_01.rs  struct_02.rs  struct_03.rs  tutorial.rs  vec_01.rs
