[package]
name = "simple"
version = "0.1.0"
authors = ["Clemens Novak <clemens@familie-novak.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_trace"]}
simple_logger = "1.11.0"
